2008-05-28 <Gustaf.Neumann@wu-wien.ac.at>
    * make "info (inst)?forward -definition name" more robust (provide an
      error message, if <name> is nog given 
    * New info subcommands "info parametercmd" 
       and "info instparametercmd"
    * export *parametercmds in Serializer, use "-noinit" on slots as well

2008-05-26 <Gustaf.Neumann@wu-wien.ac.at>
    * fixed bug in info instdefault, when argument is an empty 
       string. Example:
           X info instdefault crash "" var

2008-05-09 <Gustaf.Neumann@wu-wien.ac.at>
    * used catch in the deprecated package xotcl::upvar-compat
      as suggested by Jeff Hobbs

2008-03-18 <Gustaf.Neumann@wu-wien.ac.at>
    * allowed "abstract method" in additon to "abstract instproc"
      and "abstract proc"

2008-02-26 <Gustaf.Neumann@wu-wien.ac.at>
    * xotcl.c: The double ;; chokes MSVC6 in the next line.
      (many thanks for Andreas Kupries for reporting)

2008-02-25 <Gustaf.Neumann@wu-wien.ac.at>
    * Fix for "x configure -set"; many thanks to 
      Rene Zamseil for reporting. 

2008-02-24 <Gustaf.Neumann@wu-wien.ac.at>
    * Release of XOTcl 1.6.0

2008-02-22: <Gustaf.Neumann@wu-wien.ac.at>
   * Update of documentation

2008-02-21: <Gustaf.Neumann@wu-wien.ac.at>
  * Clear XOTCL_MIXIN_ORDER_VALID flag unconditionally 
     in MixinInvalidateObjOrders() for mixins (Neophytos
     had problems in naviserver; many thanks for reporting!)

2008-02-21: <Gustaf.Neumann@wu-wien.ac.at>

  * Replaced Tcl_ObjSetVar2() with Tcl_SetVar2Ex() in nonposargs,
    since Tcl 8.5 seemed to optimize local variables away, if these
    not referenced directly from from Tcl.

    Tcl 8.5 seems to optimize proc-local variables away, which are not
    directly referenced by the Tcl proc body.  In the following
    example, "ot" is set from C (via nonposargs, previously via
    Tcl_ObjSetVar2()) and consumed via C (from the db-driver, using
    :ot).

       SomeClass instproc foo {-ot} {
         #ns_log notice ot=$ot